--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html>
 <head>
   <title>Lista "Do Zrobienia"</title>
-  <meta http-equiv="Content-Type" content="text/html:charset=UTF-8" > <!-- pozwala używać polskich znaków -->
+  <meta http-equiv="Content-Type" content="text/html:charset=UTF-8" >
   <link rel="stylesheet" type="text/css" href="styl.css">
 </head>
 <body>
   <h1>Twoja Lista</h1>
   <div class="adder"> 
-    <input type="text" class="input" placeholder="Dodaj element do listy" /> <!-- pole do wpisywania tekstu -->
+    <input type="text" class="input" placeholder="Dodaj element do listy" /> 
     <span class="add">+</span> 
   </div>
   <ul> <!-- Przykładowe elementy listy -->
@@ -21,7 +21,7 @@
   </ul>
     <input id="click" type="button" value="Pobierz" onclick="saveToArray()" />
   <h1>Aby usunąć, upuść poniżej</h1>
-  <div class="dropper" ondrop="drop(event)" ondragover="allowDrop(event)">  <!-- skrypty dla pola upuszczania -->
+  <div class="dropper" ondrop="drop(event)" ondragover="allowDrop(event)">  <!-- scripts for drop area -->
   </div>
 
 
